--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -60,68 +60,4 @@
         </div>
     </div>
 </section>
-<!-- Portfolio Grid Section -->
-<!-- <section id="portfolio" class="bg-light-gray">
-    <div class="container">
-        <div class="row last-added">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Last products Added</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-sm-6 portfolio-item group-products">
-                <div class="portfolio-caption">
-                    <img id="last-img" src="../img/pollo-asado.jpg" class="img-responsive" alt="">
-                    <h4>Roasted Chicken</h4>
-                    <p class="text-muted">Distance: 600m</p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="portfolio-caption">
-                    <img id="last-img" src="../img/ensalada.jpg" class="img-responsive" alt="">
-                    <h4>Fresh Salad</h4>
-                    <p class="text-muted">Distance: 850m</p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="portfolio-caption">
-                    <img id="last-img" src="../img/pan-barra.jpg" class="img-responsive" alt="">
-                    <h4>Bread</h4>
-                    <p class="text-muted">Distance: 1200m</p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="portfolio-caption">
-                    <h4>Carrots</h4>
-                    <p class="text-muted">Website Design</p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="portfolio-caption">
-                    <h4>Croissantes</h4>
-                    <p class="text-muted">Website Design</p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="portfolio-caption">
-                    <h4>Fresh Fish</h4>
-                    <p class="text-muted">Website Design</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
-<div class="container footer-home">
-        <div class="row">
-            <div class="col-xs-12 col-md-4">
-                <span class="copyright">Copyright &copy; Zero Waste 2017 by <a href="https://github.com/LeonelAV">LeonelAV</a></span>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-                <div><a href="http://www.skylabcoders.com/es/">SKYLABCODERS</a></div>
-            </div>
-             <div class="col-xs-12 col-md-4">
-                <span class="copyright">Twitter<a href="https://twitter.com/Leocatorze">Leocatorze</a></span>
-            </div>
-        </div>
-    </div>
+<div ng-include src="'templates/includes/footer.html'"></div>
