--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -1,8 +1,8 @@
-#main > * {
-  margin-top: 60px;
-  margin: 0px;
-  position: relative;
-  position: fixed;
+#main-map {
+  // margin-top: 60px;
+  // margin: 0px;
+  // position: relative;
+  // position: fixed;
   height: 60vh;
   width: 100%; 
 }
