--- a/client/templates/includes/footer.html
+++ b/client/templates/includes/footer.html
@@ -1,5 +1,4 @@
-<footer>
-<nav class=" navbar-fixed-bottom">
+<nav class="navbar navbar-default footer-view">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-4">
@@ -13,4 +12,4 @@
             </div>
         </div>
     </div>
-</footer>
+</nav>
