map zoom changed

--- a/client/templates/uploadShop.html
+++ b/client/templates/uploadShop.html
@@ -25,9 +25,9 @@
                                 <p>{{info}}</p>
                             </div>
                             <!--  Get the coordenates -->
-                            <div class="hidden form-group">
+                            <div class=" form-group">
                                 <label for="shopCord">Address</label>
-                                <input ng-model="address" name="shopCord" type="text" class="hidden form-control" id="input-code" required>
+                                <input ng-model="address" name="shopCord" type="text" class=" form-control" id="input-code" required>
                                 <input ng-value="{{ lat }}" ng-model="lat">
                                 <input ng-value="{{ lng }}" ng-model="lng">
                             </div>
