--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -81,8 +81,9 @@ select {
     display: flex;
     flex-wrap: wrap;
     li {
-      width: 233px;
-      margin-right: 20px;
+      width: 300px;
+      margin-right: 10px;
+      @media()
       .thumbnail {
         height: 400px;
         .container-image {
